--- a/vue_admin/src/styles/main.scss
+++ b/vue_admin/src/styles/main.scss
@@ -1,4 +1,9 @@
 @import './normalize.scss';
-body {
-  background-color:red;
+body,ul,p{
+  margin:0;
+  // background-color: #000;
+}
+ul{
+  padding-left:0;
+  list-style-type: none;
 }
